# workProject

./: CMakeLists.txt  main.cpp
csv/: devices.csv  events.csv  hardware.csv  paramEv.csv  paramTPO.csv
include/: Action.hpp  ActionIn.hpp  ActionInTime.hpp  ActionOut.hpp  ActionOutEvent.hpp  Event.hpp  EventCustom.hpp  EventCustom1.hpp  EventCustomBits.hpp  EventCustomTIme.hpp  EventCustomTemplate.hpp  EventRaw.hpp  HardCommand.hpp  HardwareRaw.hpp  device.hpp  deviceRAW.hpp  deviceROW.hpp  deviceRaw.hpp  includes.hpp
tests/: EventCustomTest.cpp
