cmake_minimum_required(VERSION 3.27)
project(start)
set(APP_SOURCES main.cpp)
add_executable(${PROJECT_NAME} ${APP_SOURCES})
add_definitions(-O3 -Wall -pedantic -fPIC -c -W -std=c++17)
target_include_directories(${PROJECT_NAME} PUBLIC include)

#file(GLOB_RECURSE LIB_SOURCES "source/*.cpp" )
#add_library(LIB_NAME SHARED ${LIB_SOURCES})
#target_include_directories(LIB_NAME PUBLIC include)

find_package(Catch2 3 REQUIRED)
file(GLOB_RECURSE TEST_SOURCES "tests/*.cpp" )
add_executable(unit_test ${TEST_SOURCES} )
target_include_directories(unit_test PUBLIC include)
target_link_libraries(unit_test PUBLIC  Catch2::Catch2WithMain)
include(CTest)
include(Catch)
catch_discover_tests(unit_test)